--- a/admin.html
+++ b/admin.html
@@ -73,7 +73,7 @@
 
     <!-- Formulário de administração -->
     <div id="adminPanel" style="display: none;">
-        <form method="POST" action="/admin.html" onsubmit="handleSubmit(event)">
+        <form id="statusForm" onsubmit="handleSubmit(event)">
             <label for="numero">Número:</label>
             <input type="number" id="numero" name="numero" min="1" required>
             
@@ -143,16 +143,32 @@
         }
 
         // Função para manipular o envio do formulário
-        function handleSubmit(event) {
+        async function handleSubmit(event) {
             event.preventDefault(); // Previne o comportamento padrão de envio do formulário
             const numero = document.getElementById('numero').value;
             const status = document.getElementById('status').value;
 
-            // Atualiza o histórico com a alteração
-            updateHistorico(numero, status);
+            try {
+                // Envia os dados para o servidor
+                const response = await fetch('https://rifa-test3.onrender.com/update-number', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ numero, status })
+                });
 
-            // Exibe uma mensagem de confirmação
-            alert(`Número: ${numero} alterado para ${status === 'disponivel' ? 'Disponível' : 'Comprado'}`);
+                if (response.ok) {
+                    // Atualiza o histórico com a alteração
+                    updateHistorico(numero, status);
+
+                    // Exibe uma mensagem de confirmação
+                    alert(`Número: ${numero} alterado para ${status === 'disponivel' ? 'Disponível' : 'Comprado'}`);
+                } else {
+                    alert('Erro ao atualizar o status do número');
+                }
+            } catch (error) {
+                console.error('Erro na comunicação com o servidor:', error);
+                alert('Erro ao enviar os dados para o servidor');
+            }
         }
 
         // Verifica se está logado ao carregar a página
