--- a/admin.html
+++ b/admin.html
@@ -150,7 +150,7 @@
 
             try {
                 // Envia os dados para o servidor
-                const response = await fetch('https://rifa-test3.onrender.com/numeros.json', {
+                const response = await fetch('https://rifa-test3.onrender.com/numbers', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ numero, status })
