--- a/index.html
+++ b/index.html
@@ -183,41 +183,112 @@
         // Função para buscar os números da rifa
        // Função para buscar os números da rifa
 // Função para buscar os números da rifa
-async function checkNumbers() {
+// Função para verificar a disponibilidade do número
+async function checkNumberAvailability(numero) {
     try {
         const response = await fetch('https://rifa-test3.onrender.com/update-number');
         const data = await response.json();
 
-        const numbersGrid = document.querySelector('#numbers-grid');
-        numbersGrid.innerHTML = ''; // Limpar números anteriores
+        const numeroEncontrado = data.numeros.find(num => num.numero === parseInt(numero));
 
-        data.numeros.forEach(num => {
-            const numberElement = document.createElement('div');
-            numberElement.classList.add('number');
-
-            numberElement.textContent = num.numero;
-
-            // Verifica se o número foi comprado e adiciona a classe adequada
-            if (num.status === 'comprado') {
-                numberElement.style.backgroundColor = '#ff4c4c'; // Cor de fundo para números comprados
-                numberElement.style.cursor = 'not-allowed'; // Impede a seleção
-            } else {
-                numberElement.style.backgroundColor = '#d63384'; // Cor para números disponíveis
-                numberElement.style.cursor = 'pointer'; // Permite a seleção
-                numberElement.onclick = () => selectNumber(num.numero); // Função de seleção de número
-            }
-
-            numbersGrid.appendChild(numberElement);
-        });
+        if (numeroEncontrado && numeroEncontrado.status === 'comprado') {
+            return false; // O número não está disponível
+        }
+        return true; // O número está disponível
     } catch (error) {
-        console.error('Erro ao buscar números:', error);
+        console.error('Erro ao verificar disponibilidade do número:', error);
+        return false;
     }
 }
 
-// Função para selecionar o número e preenchê-lo no formulário
-function selectNumber(numero) {
-    document.getElementById('numero').value = numero;
+// Função para exibir os números disponíveis em uma caixa de diálogo
+function showAvailableNumbers(numbers) {
+    const availableNumbers = numbers.filter(num => num.status !== 'comprado');
+    
+    // Gerar lista de números disponíveis
+    const numbersList = availableNumbers.map(num => num.numero).join(", ");
+
+    const dialog = document.createElement('div');
+    dialog.style.position = 'fixed';
+    dialog.style.top = '50%';
+    dialog.style.left = '50%';
+    dialog.style.transform = 'translate(-50%, -50%)';
+    dialog.style.backgroundColor = '#fff';
+    dialog.style.border = '2px solid #d63384';
+    dialog.style.padding = '20px';
+    dialog.style.textAlign = 'center';
+    dialog.style.boxShadow = '0 4px 8px rgba(0, 0, 0, 0.1)';
+    dialog.style.zIndex = '1000';
+    dialog.innerHTML = `
+        <h3>Número Não Disponível</h3>
+        <p>O número selecionado já foi comprado. Por favor, escolha um dos números disponíveis abaixo:</p>
+        <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px;">
+            ${availableNumbers.map(num => `<span style="background-color: #d63384; color: white; padding: 10px; border-radius: 50%; font-weight: bold;">${num.numero}</span>`).join('')}
+        </div>
+        <button onclick="closeDialog()" style="margin-top: 20px; background-color: #d63384; color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer;">Fechar</button>
+    `;
+    document.body.appendChild(dialog);
 }
+
+// Função para fechar a caixa de diálogo
+function closeDialog() {
+    const dialog = document.querySelector('div[style*="position: fixed"]');
+    if (dialog) {
+        dialog.remove();
+    }
+}
+
+// Alteração no submit do formulário para verificar a disponibilidade do número
+document.getElementById("payment-form").addEventListener("submit", function (event) {
+    event.preventDefault();
+
+    const nome = document.getElementById("nome").value;
+    const telefone = document.getElementById("telefone").value;
+    const numero = document.getElementById("numero").value;
+
+    // Verifica se o número está disponível
+    checkNumberAvailability(numero)
+        .then(isAvailable => {
+            if (isAvailable) {
+                // Se o número estiver disponível, envia os dados via fetch
+                document.getElementById("loading-indicator").style.display = "block";
+                document.getElementById("error-message").textContent = "";  // Limpa mensagem de erro
+
+                fetch('https://rifa-test3.onrender.com/salvar', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ nome_completo: nome, telefone: telefone, numero_rifa: numero })
+                })
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById("loading-indicator").style.display = "none";  // Esconde o carregamento
+                    if (data.message) {
+                        document.getElementById("pix-container").classList.remove("hidden"); // Exibe a seção de pagamento
+                    } else {
+                        document.getElementById("error-message").textContent = "Erro ao salvar dados. Tente novamente.";
+                    }
+                })
+                .catch(error => {
+                    console.error("Erro ao salvar dados:", error);
+                    document.getElementById("loading-indicator").style.display = "none"; // Esconde o carregamento
+                    document.getElementById("error-message").textContent = "Erro ao salvar dados. Tente novamente.";
+                });
+            } else {
+                // Se o número não estiver disponível, exibe a caixa de diálogo
+                fetch('https://rifa-test3.onrender.com/update-number')
+                    .then(response => response.json())
+                    .then(data => showAvailableNumbers(data.numeros))
+                    .catch(error => console.error('Erro ao buscar números disponíveis:', error));
+            }
+        })
+        .catch(error => {
+            console.error('Erro ao verificar disponibilidade:', error);
+            document.getElementById("error-message").textContent = "Erro ao verificar disponibilidade do número. Tente novamente.";
+        });
+});
+
         // Chama a função para carregar os números ao carregar a página
         window.onload = checkNumbers;
     
