--- a/admin.html
+++ b/admin.html
@@ -19,25 +19,31 @@
         }
         label {
             font-weight: bold;
+            display: block;
+            margin-bottom: 5px;
         }
-        input, select {
-            margin: 10px 0;
+        input, select, button {
+            margin-bottom: 15px;
             padding: 10px;
             width: 100%;
             max-width: 300px;
             border: 1px solid #ccc;
             border-radius: 5px;
+            display: block;
         }
         button {
             background-color: #4CAF50;
             color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
             cursor: pointer;
         }
         button:hover {
             background-color: #45a049;
+        }
+        .logout-btn {
+            background-color: #f44336;
+            color: white;
+            cursor: pointer;
+            margin-top: 20px;
         }
         ul {
             list-style-type: none;
@@ -49,15 +55,6 @@
             margin: 5px 0;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .logout-btn {
-            background-color: #f44336;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 20px;
         }
     </style>
 </head>
@@ -75,7 +72,10 @@
     <div id="adminPanel" style="display: none;">
         <form id="statusForm" onsubmit="handleSubmit(event)">
             <label for="numero">Número:</label>
-            <input type="number" id="numero" name="numero" min="1" required>
+            <input type="text" id="numero" name="numero" list="numerosList" required>
+            <datalist id="numerosList">
+                <!-- Números serão carregados aqui dinamicamente -->
+            </datalist>
             
             <label for="status">Status:</label>
             <select id="status" name="status">
@@ -119,6 +119,29 @@
             window.location.reload(); // Recarregar a página após logout
         }
 
+        // Função para carregar os números no painel de administração
+        async function loadNumeros() {
+            try {
+                const response = await fetch('https://rifa-test3.onrender.com/get-numeros');
+                const data = await response.json();
+
+                // Carrega os números no datalist (autocomplete)
+                const numerosList = document.getElementById('numerosList');
+                numerosList.innerHTML = ''; // Limpa a lista atual
+
+                data.numeros.forEach(item => {
+                    const option = document.createElement('option');
+                    option.value = item.numero;
+                    numerosList.appendChild(option);
+                });
+
+                // Atualiza o histórico
+                loadHistorico();
+            } catch (error) {
+                console.error('Erro ao carregar números:', error);
+            }
+        }
+
         // Função para carregar o histórico de atualizações
         function loadHistorico() {
             const historico = JSON.parse(localStorage.getItem('historico')) || [];
@@ -144,68 +167,42 @@
 
         // Função para manipular o envio do formulário
         async function handleSubmit(event) {
-    event.preventDefault(); // Previne o comportamento padrão de envio do formulário
-    const numero = document.getElementById('numero').value;
-    const status = document.getElementById('status').value;
+            event.preventDefault(); // Previne o comportamento padrão de envio do formulário
+            const numero = document.getElementById('numero').value;
+            const status = document.getElementById('status').value;
 
-    try {
-        // Envia os dados para o servidor
-        const response = await fetch('https://rifa-test3.onrender.com/update-number', {
-            method: 'POST',  // Mudou de GET para POST
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ numero, status })
-        });
+            try {
+                // Envia os dados para o servidor
+                const response = await fetch('https://rifa-test3.onrender.com/update-number', {
+                    method: 'POST',  // Mudou de GET para POST
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ numero, status })
+                });
 
-        if (response.ok) {
-            // Atualiza o histórico com a alteração
-            updateHistorico(numero, status);
+                if (response.ok) {
+                    // Atualiza o histórico com a alteração
+                    updateHistorico(numero, status);
 
-            // Exibe uma mensagem de confirmação
-            alert(`Número: ${numero} alterado para ${status === 'disponivel' ? 'Disponível' : 'Comprado'}`);
+                    // Exibe uma mensagem de confirmação
+                    alert(`Número: ${numero} alterado para ${status === 'disponivel' ? 'Disponível' : 'Comprado'}`);
 
-            // Recarregar os números para refletir a mudança
-            loadNumeros(); // Chamada para recarregar os números
-        } else {
-            alert('Erro ao atualizar o status do número');
+                    // Recarregar os números para refletir a mudança
+                    loadNumeros(); // Chamada para recarregar os números
+                } else {
+                    alert('Erro ao atualizar o status do número');
+                }
+            } catch (error) {
+                console.error('Erro na comunicação com o servidor:', error);
+                alert('Erro ao atualizar o status do número');
+            }
         }
-    } catch (error) {
-        console.error('Erro na comunicação com o servidor:', error);
-        alert('Erro ao atualizar o status do número');
-    }
-}
 
-// Função para carregar os números atualizados
-async function loadNumeros() {
-    try {
-        const response = await fetch('https://rifa-test3.onrender.com/update-number');
-        const data = await response.json();
-        console.log('Números atualizados:', data);
-
-        // Atualize a interface com os dados atualizados
-        const historicoElement = document.getElementById('historico');
-        historicoElement.innerHTML = ''; // Limpa o histórico
-
-        // Exibe os números atualizados no histórico
-        data.numeros.forEach(item => {
-            const li = document.createElement('li');
-            li.textContent = `Número ${item.numero} está ${item.status === 'disponivel' ? 'Disponível' : 'Comprado'}`;
-            historicoElement.appendChild(li);
-        });
-    } catch (error) {
-        console.error('Erro ao carregar números:', error);
-    }
-}
-
-// Chama essa função para carregar os números ao carregar a página
-window.onload = () => {
-    loadNumeros();
-};
-        // Verifica se está logado ao carregar a página
+        // Chama essa função para carregar os números ao carregar a página
         window.onload = () => {
             if (isLoggedIn()) {
                 document.getElementById('adminPanel').style.display = 'block';
                 document.getElementById('loginMessage').style.display = 'none';
-                loadHistorico();
+                loadNumeros();
             } else {
                 document.getElementById('adminPanel').style.display = 'none';
                 document.getElementById('loginMessage').style.display = 'block';
