--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             font-size: 12px;
             font-weight: bold;
         }
+        .number.comprado {
+            background-color: red;
+        }
         .buy-button, button[type="submit"] {
             margin-top: 20px;
             background-color: #d63384;
@@ -126,12 +129,8 @@
         <p><strong>Causa:</strong> Ajudar no ministério de dança.</p>
         <p>Escolha um número e participe!</p>
         
-        <div class="number-grid">
-            <script>
-                for (let i = 301; i <= 350; i++) {
-                    document.write(`<div class="number">${i}</div>`);
-                }
-            </script>
+        <div class="number-grid" id="number-grid">
+            <!-- Números serão carregados aqui dinamicamente -->
         </div>
         
         <button class="buy-button" onclick="document.getElementById('form-container').classList.remove('hidden')">Comprar</button>
@@ -200,6 +199,7 @@ async function checkNumberAvailability(numero) {
         return false;
     }
 }
+
 // Função para exibir os números disponíveis em uma caixa de diálogo
 function showAvailableNumbers(numbers) {
     const availableNumbers = numbers.filter(num => num.status !== 'comprado');
@@ -261,6 +261,33 @@ function closeDialog() {
         overlay.remove();
     }
 }
+
+// Função para carregar os números no painel inicial
+async function loadInitialNumbers() {
+    try {
+        const response = await fetch('https://rifa-test3.onrender.com/get-numeros');
+        if (!response.ok) {
+            throw new Error(`Erro na requisição: ${response.status}`);
+        }
+        const data = await response.json();
+
+        const numberGrid = document.getElementById('number-grid');
+        numberGrid.innerHTML = ''; // Limpa a grade atual
+
+        // Ordena os números em ordem crescente
+        data.numeros.sort((a, b) => a.numero - b.numero);
+
+        data.numeros.forEach(item => {
+            const div = document.createElement('div');
+            div.className = `number ${item.status === 'comprado' ? 'comprado' : ''}`;
+            div.textContent = item.numero;
+            numberGrid.appendChild(div);
+        });
+    } catch (error) {
+        console.error('Erro ao carregar números:', error);
+    }
+}
+
 // Alteração no submit do formulário para verificar a disponibilidade do número
 document.getElementById("payment-form").addEventListener("submit", function (event) {
     event.preventDefault();
@@ -289,6 +316,7 @@ document.getElementById("payment-form").addEventListener("submit", function (eve
                     document.getElementById("loading-indicator").style.display = "none";  // Esconde o carregamento
                     if (data.message) {
                         document.getElementById("pix-container").classList.remove("hidden"); // Exibe a seção de pagamento
+                        loadInitialNumbers(); // Recarrega os números para refletir a mudança
                     } else {
                         document.getElementById("error-message").textContent = "Erro ao salvar dados. Tente novamente.";
                     }
@@ -311,6 +339,11 @@ document.getElementById("payment-form").addEventListener("submit", function (eve
             document.getElementById("error-message").textContent = "Erro ao verificar disponibilidade do número. Tente novamente.";
         });
 });
+
+// Chama essa função para carregar os números ao carregar a página
+window.onload = () => {
+    loadInitialNumbers();
+};
     </script>        
 </body>
 </html>
