--- a/index.html
+++ b/index.html
@@ -120,6 +120,40 @@
             color: red;
             font-weight: bold;
         }
+        /* Estilos para a tela de carregamento */
+        .loading-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background-color: rgba(0, 0, 0, 0.5);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 1000;
+            opacity: 1;
+        }
+        .loading-message {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .loading-spinner {
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid #d63384;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+            margin: 0 auto 10px;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
     </style>
 </head>
 <body>
@@ -175,6 +209,13 @@
         <!-- Mensagem de erro -->
         <div class="error-message" id="error-message"></div>
 
+        <!-- Tela de carregamento -->
+        <div class="loading-overlay hidden" id="loading-overlay">
+            <div class="loading-message">
+                <div class="loading-spinner"></div>
+                <p>Aguarde um momento enquanto nossos servidores inicializam, vai levar só um instante.</p>
+            </div>
+        </div>
     </div>
     
 
@@ -288,6 +329,16 @@ async function loadInitialNumbers() {
     }
 }
 
+// Função para mostrar a tela de carregamento
+function showLoadingOverlay() {
+    document.getElementById('loading-overlay').classList.remove('hidden');
+}
+
+// Função para esconder a tela de carregamento
+function hideLoadingOverlay() {
+    document.getElementById('loading-overlay').classList.add('hidden');
+}
+
 // Alteração no submit do formulário para verificar a disponibilidade do número
 document.getElementById("payment-form").addEventListener("submit", function (event) {
     event.preventDefault();
@@ -295,6 +346,9 @@ document.getElementById("payment-form").addEventListener("submit", function (eve
     const nome = document.getElementById("nome").value;
     const telefone = document.getElementById("telefone").value;
     const numero = document.getElementById("numero").value;
+
+    // Mostra a tela de carregamento
+    showLoadingOverlay();
 
     // Verifica se o número está disponível
     checkNumberAvailability(numero)
@@ -314,6 +368,7 @@ document.getElementById("payment-form").addEventListener("submit", function (eve
                 .then(response => response.json())
                 .then(data => {
                     document.getElementById("loading-indicator").style.display = "none";  // Esconde o carregamento
+                    hideLoadingOverlay(); // Esconde a tela de carregamento
                     if (data.message) {
                         document.getElementById("pix-container").classList.remove("hidden"); // Exibe a seção de pagamento
                         loadInitialNumbers(); // Recarrega os números para refletir a mudança
@@ -324,18 +379,26 @@ document.getElementById("payment-form").addEventListener("submit", function (eve
                 .catch(error => {
                     console.error("Erro ao salvar dados:", error);
                     document.getElementById("loading-indicator").style.display = "none"; // Esconde o carregamento
+                    hideLoadingOverlay(); // Esconde a tela de carregamento
                     document.getElementById("error-message").textContent = "Erro ao salvar dados. Tente novamente.";
                 });
             } else {
                 // Se o número não estiver disponível, exibe a caixa de diálogo
                 fetch('https://rifa-test3.onrender.com/get-numeros')
                     .then(response => response.json())
-                    .then(data => showAvailableNumbers(data.numeros))
-                    .catch(error => console.error('Erro ao buscar números disponíveis:', error));
+                    .then(data => {
+                        showAvailableNumbers(data.numeros);
+                        hideLoadingOverlay(); // Esconde a tela de carregamento
+                    })
+                    .catch(error => {
+                        console.error('Erro ao buscar números disponíveis:', error);
+                        hideLoadingOverlay(); // Esconde a tela de carregamento
+                    });
             }
         })
         .catch(error => {
             console.error('Erro ao verificar disponibilidade:', error);
+            hideLoadingOverlay(); // Esconde a tela de carregamento
             document.getElementById("error-message").textContent = "Erro ao verificar disponibilidade do número. Tente novamente.";
         });
 });
