--- a/index.html
+++ b/index.html
@@ -305,8 +305,14 @@ function closeDialog() {
 
 // Função para carregar os números no painel inicial
 async function loadInitialNumbers() {
+    // Define um temporizador para mostrar a tela de carregamento após 2 segundos
+    const loadingTimeout = setTimeout(showLoadingOverlay, 2000);
+
     try {
         const response = await fetch('https://rifa-test3.onrender.com/get-numeros');
+        clearTimeout(loadingTimeout); // Limpa o temporizador se a resposta for rápida
+        hideLoadingOverlay(); // Esconde a tela de carregamento se a resposta for rápida
+
         if (!response.ok) {
             throw new Error(`Erro na requisição: ${response.status}`);
         }
@@ -325,6 +331,8 @@ async function loadInitialNumbers() {
             numberGrid.appendChild(div);
         });
     } catch (error) {
+        clearTimeout(loadingTimeout); // Limpa o temporizador em caso de erro
+        hideLoadingOverlay(); // Esconde a tela de carregamento em caso de erro
         console.error('Erro ao carregar números:', error);
     }
 }
