--- a/index.html
+++ b/index.html
@@ -120,40 +120,6 @@
             color: red;
             font-weight: bold;
         }
-        /* Estilos para a tela de carregamento */
-        .loading-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            background-color: rgba(0, 0, 0, 0.5);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 1000;
-            opacity: 1;
-        }
-        .loading-message {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .loading-spinner {
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid #d63384;
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            animation: spin 1s linear infinite;
-            margin: 0 auto 10px;
-        }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
     </style>
 </head>
 <body>
@@ -208,14 +174,6 @@
 
         <!-- Mensagem de erro -->
         <div class="error-message" id="error-message"></div>
-
-        <!-- Tela de carregamento -->
-        <div class="loading-overlay hidden" id="loading-overlay">
-            <div class="loading-message">
-                <div class="loading-spinner"></div>
-                <p>Aguarde um momento enquanto nossos servidores inicializam, vai levar só um instante.</p>
-            </div>
-        </div>
     </div>
     
 
@@ -337,14 +295,13 @@ document.getElementById("payment-form").addEventListener("submit", function (eve
     const numero = document.getElementById("numero").value;
 
     // Mostra a tela de carregamento
-    showLoadingOverlay();
+    document.getElementById("loading-indicator").style.display = "block";
 
     // Verifica se o número está disponível
     checkNumberAvailability(numero)
         .then(isAvailable => {
             if (isAvailable) {
                 // Se o número estiver disponível, envia os dados via fetch
-                document.getElementById("loading-indicator").style.display = "block";
                 document.getElementById("error-message").textContent = "";  // Limpa mensagem de erro
 
                 fetch('https://rifa-test3.onrender.com/salvar', {
@@ -357,7 +314,6 @@ document.getElementById("payment-form").addEventListener("submit", function (eve
                 .then(response => response.json())
                 .then(data => {
                     document.getElementById("loading-indicator").style.display = "none";  // Esconde o carregamento
-                    hideLoadingOverlay(); // Esconde a tela de carregamento
                     if (data.message) {
                         document.getElementById("pix-container").classList.remove("hidden"); // Exibe a seção de pagamento
                         loadInitialNumbers(); // Recarrega os números para refletir a mudança
@@ -368,7 +324,6 @@ document.getElementById("payment-form").addEventListener("submit", function (eve
                 .catch(error => {
                     console.error("Erro ao salvar dados:", error);
                     document.getElementById("loading-indicator").style.display = "none"; // Esconde o carregamento
-                    hideLoadingOverlay(); // Esconde a tela de carregamento
                     document.getElementById("error-message").textContent = "Erro ao salvar dados. Tente novamente.";
                 });
             } else {
@@ -377,17 +332,17 @@ document.getElementById("payment-form").addEventListener("submit", function (eve
                     .then(response => response.json())
                     .then(data => {
                         showAvailableNumbers(data.numeros);
-                        hideLoadingOverlay(); // Esconde a tela de carregamento
+                        document.getElementById("loading-indicator").style.display = "none"; // Esconde o carregamento
                     })
                     .catch(error => {
                         console.error('Erro ao buscar números disponíveis:', error);
-                        hideLoadingOverlay(); // Esconde a tela de carregamento
+                        document.getElementById("loading-indicator").style.display = "none"; // Esconde o carregamento
                     });
             }
         })
         .catch(error => {
             console.error('Erro ao verificar disponibilidade:', error);
-            hideLoadingOverlay(); // Esconde a tela de carregamento
+            document.getElementById("loading-indicator").style.display = "none"; // Esconde o carregamento
             document.getElementById("error-message").textContent = "Erro ao verificar disponibilidade do número. Tente novamente.";
         });
 });
